--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   margin-bottom: 40px;
 }
 
-.nav, .bottom-links, .middle-content {
+.bottom-links, .middle-content {
   margin-top: 30px;
   margin-bottom: 20px;
   padding: 10px 0;
@@ -81,25 +81,6 @@ h1 {
   .nav, .bottom-links, .middle-content {
     padding: 20px;
   }
-}
-
-/* Dark Mode Styles */
-.dark-mode {
-  background-color: #121212;
-  color: #ffffff;
-}
-
-.dark-mode .nav, .dark-mode .bottom-links, .dark-mode .middle-content {
-  background-color: #333;
-  color: #ffffff;
-}
-
-.dark-mode .nav a, .dark-mode .bottom-links a {
-  color: #0099ff;
-}
-
-.dark-mode img {
-  border-color: #ffffff;
 }
 
 /* Fade-in animation */
